--- a/apps/client/src/index.html
+++ b/apps/client/src/index.html
@@ -17,6 +17,9 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+
+    <!-- OptimizedImageComponent - fix NG02956 (NgOptimizedImage) -->
+    <link rel="preconnect" href="https://media-3.api-sports.io" />
   </head>
   <body>
     <futbet-root></futbet-root>
