feat(match): page draft

--- a/apps/client/src/index.html
+++ b/apps/client/src/index.html
@@ -20,6 +20,7 @@
 
     <!-- OptimizedImageComponent - fix NG02956 (NgOptimizedImage) -->
     <link rel="preconnect" href="https://media-3.api-sports.io" />
+    <link rel="preconnect" href="https://media.api-sports.io" />
   </head>
   <body>
     <futbet-root></futbet-root>
