--- a/apps/client/src/index.html
+++ b/apps/client/src/index.html
@@ -5,7 +5,10 @@
     <meta charset="utf-8" />
     <title>futbet</title>
     <base href="/" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
     <!-- Angular Material -->
