feat(pwa): update theme color & add ios meta tags & icons

--- a/apps/client/src/index.html
+++ b/apps/client/src/index.html
@@ -23,7 +23,17 @@
 
     <!-- Angular PWA -->
     <link rel="manifest" href="manifest.webmanifest" />
-    <meta name="theme-color" content="#1976d2" />
+    <meta name="theme-color" content="#fffff" />
+    <!-- Angular PWA - iOS specific meta tags -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-title" content="futbet" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="white" />
+
+    <!-- <link
+      rel="mask-icon"
+      href="assets/images/icons/safari-pinned-tab.svg"
+      color="#5bbad5"
+    /> -->
 
     <!-- OptimizedImageComponent - fix NG02956 (NgOptimizedImage) -->
     <link rel="preconnect" href="https://media.api-sports.io" />
