fix(pwa): missing manifest file (6)

--- a/apps/client/src/index.html
+++ b/apps/client/src/index.html
@@ -21,6 +21,9 @@
       rel="stylesheet"
     />
 
+    <!-- Angular PWA -->
+    <link rel="manifest" href="manifest.webmanifest" />
+
     <!-- OptimizedImageComponent - fix NG02956 (NgOptimizedImage) -->
     <link rel="preconnect" href="https://media.api-sports.io" />
     <link rel="preconnect" href="https://media-2.api-sports.io" />
