feat(pwa): ios white status bar

--- a/apps/client/src/index.html
+++ b/apps/client/src/index.html
@@ -23,6 +23,8 @@
 
     <!-- Angular PWA -->
     <link rel="manifest" href="manifest.webmanifest" />
+    <!-- Angular PWA - iOS -->
+    <meta name="apple-mobile-web-app-status-bar-style" content="white" />
 
     <!-- OptimizedImageComponent - fix NG02956 (NgOptimizedImage) -->
     <link rel="preconnect" href="https://media.api-sports.io" />
