--- a/apps/client/src/index.html
+++ b/apps/client/src/index.html
@@ -25,6 +25,7 @@
     <link rel="manifest" href="manifest.webmanifest" />
     <!-- Angular PWA - iOS -->
     <meta name="apple-mobile-web-app-status-bar-style" content="white" />
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
 
     <!-- OptimizedImageComponent - fix NG02956 (NgOptimizedImage) -->
     <link rel="preconnect" href="https://media.api-sports.io" />
