refactor: project name to reelscore (1/2)

--- a/apps/client/src/index.html
+++ b/apps/client/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <!-- Angular -->
     <meta charset="utf-8" />
-    <title>futbet</title>
+    <title>reelscore</title>
     <base href="/" />
     <meta
       name="viewport"
@@ -30,7 +30,7 @@
     <link rel="preconnect" href="https://media-3.api-sports.io" />
   </head>
   <body>
-    <futbet-root></futbet-root>
+    <reelscore-root></reelscore-root>
     <noscript>
       Please enable JavaScript to continue using this application.
     </noscript>
