feat(pwa-name): Untitled label in ios

--- a/apps/client/src/index.html
+++ b/apps/client/src/index.html
@@ -24,6 +24,15 @@
     <!-- Angular PWA -->
     <link rel="manifest" href="manifest.webmanifest" />
 
+    <!-- Apple hide Safari -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+
+    <!-- Apple changing the status bar appearance -->
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+
+    <!-- Android add to the home screen -->
+    <meta name="mobile-web-app-capable" content="yes" />
+
     <!-- OptimizedImageComponent - fix NG02956 (NgOptimizedImage) -->
     <link rel="preconnect" href="https://media.api-sports.io" />
     <link rel="preconnect" href="https://media-2.api-sports.io" />
