--- a/apps/client/src/index.html
+++ b/apps/client/src/index.html
@@ -23,6 +23,7 @@
 
     <!-- Angular PWA -->
     <link rel="manifest" href="manifest.webmanifest" />
+    <meta name="apple-mobile-web-app-title" content="reelscore" />
 
     <!-- Apple hide Safari -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
