fix(pwa): app title in status bar

--- a/apps/client/src/index.html
+++ b/apps/client/src/index.html
@@ -23,13 +23,15 @@
 
     <!-- Angular PWA -->
     <link rel="manifest" href="manifest.webmanifest" />
-    <meta name="apple-mobile-web-app-title" content="reelscore" />
 
-    <!-- Apple hide Safari -->
+    <!-- Apple add to the home screen -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
 
     <!-- Apple changing the status bar appearance -->
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+
+    <!-- Apple changing the status bar app title -->
+    <meta name="apple-mobile-web-app-title" content="reelscore" />
 
     <!-- Android add to the home screen -->
     <meta name="mobile-web-app-capable" content="yes" />
