--- a/apps/client/src/index.html
+++ b/apps/client/src/index.html
@@ -28,7 +28,10 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
 
     <!-- Apple changing the status bar appearance -->
-    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
 
     <!-- Apple changing the status bar app title -->
     <meta name="apple-mobile-web-app-title" content="reelscore" />
