--- a/apps/client/src/index.html
+++ b/apps/client/src/index.html
@@ -7,7 +7,7 @@
     <base href="/" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, viewport-fit=cover, user-scalable=no"
     />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
