refactor: app selector

--- a/apps/client/src/index.html
+++ b/apps/client/src/index.html
@@ -45,7 +45,7 @@
     <link rel="preconnect" href="https://media-3.api-sports.io" />
   </head>
   <body>
-    <reelscore-root></reelscore-root>
+    <rs-root></rs-root>
     <noscript>
       Please enable JavaScript to continue using this application.
     </noscript>
